[project]
name = "todolist-back"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan",email = "johjo@ytreza.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pyqure @ git+https://github.com/Johjo/pyqure",
    "httpx (>=0.28.1,<0.29.0)",
    "todolist-controller @ git+https://github.com/Johjo/todolist_controller.git"
]

[tool.poetry]
packages = [{include = "todolist_back", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
